add better looking dropdown menu. now transitioning from hamburger to 5rem

--- a/index.html
+++ b/index.html
@@ -43,14 +43,24 @@
                         <li class="nav-item"><a href="#products-grid-container">Products</a></li>
                         <li class="nav-item"><a href="#top"> Home</a> </li>
                     </ul>
+
+
+                    <div id="dropdown-menu">
+                        <div id="hamburger-container">
+                            <button id="hamburger"><i class="fa-solid fa-bars"></i></button>
+                            <ul>
+                                <li><a href="#top">Home</a></li>
+                                <li><a href="#about">About</a></li>
+                                <li><a href="#products-grid-container">Products</a></li> 
+                            </ul>
+                        </div>
+                    </div>
+
+
                 </nav>
+
             </span>
-            <div id="hamburger-container">
-                <button id="hamburger"><i class="fa-solid fa-bars"></i></button>
-                <a class="disapear" href="#top">Home</a>
-                <a class="disapear" href="#about">About</a>
-                <a class="disapear" href="#products-grid-container">Products</a>
-            </div>
+
         </header>
         <section id="home">
             <div id="presentation-background">
@@ -59,10 +69,13 @@
                         <div id="owner-picture-container"><img id="plant-guy-image" src="assets/images/plant-guy.webp">
                         </div>
                         <h2>I have two passions. <br>
-                            <span id="text-yellow-presentation">Plants</span> and <span id="text-red-presentation">traveling.</span>
+                            <span id="text-yellow-presentation">Plants</span> and <span
+                                id="text-red-presentation">traveling.</span>
                         </h2>
                         <hr>
-                        <p> Keeping my plants alive while im not in my house used to be tricky. Thats why my goal is to make your hunt for the perfect self-watering system easy so you can focus on the good things in life. Choose your system below.
+                        <p> Keeping my plants alive while im not in my house used to be tricky. Thats why my goal is to
+                            make your hunt for the perfect self-watering system easy so you can focus on the good things
+                            in life. Choose your system below.
                         <div id="arrow-down"> <i class="fa-solid fa-arrow-down-long"> </i></div>
                         </p>
                     </div>
@@ -70,30 +83,49 @@
             </div>
         </section>
         <section id="products-grid-container">
-            <div class="section-logo"><h2>Products</h2></div>
-            <div id="product-1-logo"><h2>pSPHEAR</h2></div>
-            <div id="product-2-logo"><h2>pDROP</h2></div>
-            <div id="product-3-logo"><h2>pSTRING</h2></div>
+            <div class="section-logo">
+                <h2>Products</h2>
+            </div>
+            <div id="product-1-logo">
+                <h2>pSPHEAR</h2>
+            </div>
+            <div id="product-2-logo">
+                <h2>pDROP</h2>
+            </div>
+            <div id="product-3-logo">
+                <h2>pSTRING</h2>
+            </div>
             <div id="product-1"></div>
             <div id="product-2"></div>
             <div id="product-3"></div>
-            <p id="product-1-info">Our highly sophisticated yet wasy pSphear is the most advanced watering ball yet. With a uniqe design ensuring concistent waterflow your plant will get the exact ammount of water it needs. No more, No less, No problem. 
+            <p id="product-1-info">Our highly sophisticated yet wasy pSphear is the most advanced watering ball yet.
+                With a uniqe design ensuring concistent waterflow your plant will get the exact ammount of water it
+                needs. No more, No less, No problem.
                 <br>
                 <br>
                 Capacity:<br>
-                Up to 7 days</p>
-            <p id="product-2-info">If you have a bunch of plants pretty close to each other it might seem like a hassle to fill all those wSphears. To time consuming and frankly pretty boring. In that case you might be better of using our wDrop system. One 10liter container provide water for your plants via specially designed tubes. up to 10 plants can be fed with water like this. Works great if you travel for longer period of times or just really dont like watering your plants.
+                Up to 7 days
+            </p>
+            <p id="product-2-info">If you have a bunch of plants pretty close to each other it might seem like a hassle
+                to fill all those wSphears. To time consuming and frankly pretty boring. In that case you might be
+                better of using our wDrop system. One 10liter container provide water for your plants via specially
+                designed tubes. up to 10 plants can be fed with water like this. Works great if you travel for longer
+                period of times or just really dont like watering your plants.
 
                 <br>
                 <br>
                 Capacity:<br>
                 Up to 14 days
             </p>
-            <p id="product-3-info">If you have many smaller plants in the same area of your house our magic string system will be the perfect fit. Simply fill the bowl of water and put one end of the string in the bowl and the other 2 inces down in the soil. This system can feed many plants and if you replace the bowl with an even bigger one you can increase the time you can travel.
+            <p id="product-3-info">If you have many smaller plants in the same area of your house our magic string
+                system will be the perfect fit. Simply fill the bowl of water and put one end of the string in the bowl
+                and the other 2 inces down in the soil. This system can feed many plants and if you replace the bowl
+                with an even bigger one you can increase the time you can travel.
                 <br>
                 <br>
                 Capacity:<br>
-                Up to 14 days </p>
+                Up to 14 days
+            </p>
             <a href="#purchase" id="product-1-buy">13€ <i class="fa-solid fa-cart-shopping"></i></a>
             <a href="#purchase" id="product-2-buy">20€ <i class="fa-solid fa-cart-shopping"></i></a>
             <a href="#purchase" id="product-3-buy">75€ <i class="fa-solid fa-cart-shopping"></i></a>
@@ -107,20 +139,32 @@
         </section>
         <section id="about">
             <h2>About</h2>
-            <p>Going away on vacation is a wonderful time. For many of us that is when we create our best memories. Things we will remember for the rest of our lives. But for some of us there is that constant worry about what life will be when we come back. What if something happens, why do I even work at that place still, what if the house burns down etc? Well, most of our worries are quite weird or even extreme. <br>
+            <p>Going away on vacation is a wonderful time. For many of us that is when we create our best memories.
+                Things we will remember for the rest of our lives. But for some of us there is that constant worry about
+                what life will be when we come back. What if something happens, why do I even work at that place still,
+                what if the house burns down etc? Well, most of our worries are quite weird or even extreme. <br>
                 <br>
             <h3>But our plants?</h3>
-            <br> Plants are awesome. Even the most urban city slickers of the concrete jungles of the world appreciate the different shades of green, the sense of life and clean air they bring. They give us a lot and the only thing they want in return is a little water and sunlight. Well, a little more at times but that’s basically it. And even though you might love your plants they are not your number one priority. <br>
+            <br> Plants are awesome. Even the most urban city slickers of the concrete jungles of the world appreciate
+            the different shades of green, the sense of life and clean air they bring. They give us a lot and the only
+            thing they want in return is a little water and sunlight. Well, a little more at times but that’s basically
+            it. And even though you might love your plants they are not your number one priority. <br>
             <ul> what are your options? <br>
                 <br>
                 <li>You could ask someone to water them for you</li>
                 <li>They might not show up?</li>
                 <li>Can you trust them with a key?</li>
                 <li>They might water too much and kill your plants</li>
-                <li>You could find the RIGHT watering system for your needs and be sure your plants get what they need while not having to worry about anything.</li>
+                <li>You could find the RIGHT watering system for your needs and be sure your plants get what they need
+                    while not having to worry about anything.</li>
             </ul>
             <br>
-            <br> This site aims to help with the later without you having to invest too much time or effort. But how? There are so many videos and a few blogs with videos about how to make your plants thrive. Which ones are reliable and do you really have the energy to look through them all to find a fitting solution for your needs? Check out this site and you will know which one is the best for YOUR needs within 5 minutes. You will know the cost, other options in other price ranges and where you can find the products needed (if any). Good luck my plant loving friend. /Plantcation Crew <br>
+            <br> This site aims to help with the later without you having to invest too much time or effort. But how?
+            There are so many videos and a few blogs with videos about how to make your plants thrive. Which ones are
+            reliable and do you really have the energy to look through them all to find a fitting solution for your
+            needs? Check out this site and you will know which one is the best for YOUR needs within 5 minutes. You will
+            know the cost, other options in other price ranges and where you can find the products needed (if any). Good
+            luck my plant loving friend. /Plantcation Crew <br>
             <br>
             </p>
         </section>
@@ -134,19 +178,24 @@
                                 <input id="first_name" name="first_name" placeholder="Jessica" type="text" required>
                                 <br>
                                 <label for="last_name">Last Name:<label><br>
-                                        <input id="last_name" name="last_name" placeholder="Jameson" type="text" required>
+                                        <input id="last_name" name="last_name" placeholder="Jameson" type="text"
+                                            required>
                                         <br>
                                         <label for="email">E-mail:<label><br>
-                                                <input id="email" name="email" placeholder="jessica_jameson@gmail.com" type="email" required>
+                                                <input id="email" name="email" placeholder="jessica_jameson@gmail.com"
+                                                    type="email" required>
                                                 <br>
                                                 <label for="telephone">Telephone:<label><br>
-                                                        <input id="telephone" name="telephone" placeholder="+46 704 90 91 21" type="text" required>
+                                                        <input id="telephone" name="telephone"
+                                                            placeholder="+46 704 90 91 21" type="text" required>
                                                         <br>
                                                         <p>Prefered way of communication:</p>
                                                         <label for="telephone">Telephone<label>
-                                                                <input id="tel_pref" name="prefered_communication" type="radio" value="tel_pref" required>
+                                                                <input id="tel_pref" name="prefered_communication"
+                                                                    type="radio" value="tel_pref" required>
                                                                 <label for="email_prefered">E-mail<label>
-                                                                        <input name=prefered_communication type="radio" value="email_pref" required>
+                                                                        <input name=prefered_communication type="radio"
+                                                                            value="email_pref" required>
                     </fieldset>
                     <br>
                     <fieldset id="purchase-info">
@@ -186,13 +235,17 @@
                 <h3>Opening Hours</h3> Monday - Friday<br> 09:00-17:00<br> Saturday - Sunday <br> Closed
             </div>
             <div id="section-contact">
-                <h3>Contact</h3> E-mail: <a href="mailto:webmaster@example.com">Eric Bäckman</a><br> Telephone: +47 704 90 91 21 <br> Address: Ankarstocksvägen 13 <br> 168 64, Stockholm <br> Sweden
+                <h3>Contact</h3> E-mail: <a href="mailto:webmaster@example.com">Eric Bäckman</a><br> Telephone: +47 704
+                90 91 21 <br> Address: Ankarstocksvägen 13 <br> 168 64, Stockholm <br> Sweden
             </div>
             <div id="section-social">
                 <p>Social Media</p>
-                <a href="http://www.facebook.com" target="_blank" aria-label="link to our facebook in new tab"><i class="fa-brands fa-facebook"></i></a>
-                <a href="http://www.twitter.com" target="_blank" aria-label="link to our twitter in new tab"><i class="fa-brands fa-twitter"></i></a>
-                <a href="http://www.instagram.com" target="_blank" aria-label="link to our instagram in new tab"><i class="fa-brands fa-instagram"></i></a>
+                <a href="http://www.facebook.com" target="_blank" aria-label="link to our facebook in new tab"><i
+                        class="fa-brands fa-facebook"></i></a>
+                <a href="http://www.twitter.com" target="_blank" aria-label="link to our twitter in new tab"><i
+                        class="fa-brands fa-twitter"></i></a>
+                <a href="http://www.instagram.com" target="_blank" aria-label="link to our instagram in new tab"><i
+                        class="fa-brands fa-instagram"></i></a>
             </div>
         </footer>
         <script src="https://kit.fontawesome.com/51932b41cf.js" crossorigin="anonymous"></script>
