changed numer input in form to select 0-10

--- a/index.html
+++ b/index.html
@@ -206,21 +206,57 @@
                             <option value="pDrop">pDrop</option>
                             <option value="pString">pString</option>
                         </select>
-                        <input type="number" id="how-many-1" name="how-many-1" min="1" max="100" required><br>
+                        <select id="how-many-1" name="how-many-1" required>
+                            <option value="1">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="3">4</option>
+                            <option value="3">5</option>
+                            <option value="3">6</option>
+                            <option value="3">7</option>
+                            <option value="3">8</option>
+                            <option value="3">9</option>
+                            <option value="3">10</option>
+                        </select><br>
                         <label for="select-product-2">Select Product:</label>
                         <select id="select-product-2" name="select-product-2" required>
                             <option value="pSphear">pSphear</option>
                             <option value="pDrop">pDrop</option>
                             <option value="pString">pString</option>
                         </select>
-                        <input type="number" id="how-many-2" name="how-many-2" min="1" max="100"><br>
+                        <select id="how-many-2" name="how-many-2" required>
+                            <option value="1">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="3">4</option>
+                            <option value="3">5</option>
+                            <option value="3">6</option>
+                            <option value="3">7</option>
+                            <option value="3">8</option>
+                            <option value="3">9</option>
+                            <option value="3">10</option>
+                        </select><br><br>
                         <label for="select-product-3">Select Product:</label>
                         <select id="select-product-3" name="select-product-3">
                             <option value="pSphear">pSphear</option>
                             <option value="pDrop">pDrop</option>
                             <option value="pString">pString</option>
                         </select>
-                        <input type="number" id="how-many-3" name="how-many-3" min="1" max="100"><br>
+                        <select id="how-many-3" name="how-many-3" required>
+                            <option value="1">0</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="3">4</option>
+                            <option value="3">5</option>
+                            <option value="3">6</option>
+                            <option value="3">7</option>
+                            <option value="3">8</option>
+                            <option value="3">9</option>
+                            <option value="3">10</option>
+                        </select><br><br>
                         <input id="agreement-accept" type="checkbox" name="terms-accept" value="yes" required>
                         <label for="agreement-accept">I accept the terms and conditions<label><br>
                                 <input id="submit" type="submit" name="submit" value="GO!">
