add padding for list in aboutsection

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                             <ul>
                                 <li><a href="#top">Home</a></li>
                                 <li><a href="#about">About</a></li>
-                                <li><a href="#products-grid-container">Products</a></li> 
+                                <li><a href="#products-grid-container">Products</a></li>
                             </ul>
                         </div>
                     </div>
@@ -149,12 +149,15 @@
             the different shades of green, the sense of life and clean air they bring. They give us a lot and the only
             thing they want in return is a little water and sunlight. Well, a little more at times but that’s basically
             it. And even though you might love your plants they are not your number one priority. <br>
-            <ul> what are your options? <br>
+            <ul id="options"> what are your options? <br>
                 <br>
-                <li>You could ask someone to water them for you</li>
-                <li>They might not show up?</li>
-                <li>Can you trust them with a key?</li>
-                <li>They might water too much and kill your plants</li>
+                <li>You could ask someone to water them for you
+                    <ul>
+                        <li>They might not show up?</li>
+                        <li>Can you trust them with a key?</li>
+                        <li>They might water too much and kill your plants</li>
+                    </ul>
+                </li>
                 <li>You could find the RIGHT watering system for your needs and be sure your plants get what they need
                     while not having to worry about anything.</li>
             </ul>
