removed distance on pictures height adjusted shadows on buttons

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                     30 days with a larger container
                 </p>
             </div>
-            <a href="#purchase" id="product-1-buy"><button>23,99€ <i class="fa-solid fa-cart-shopping"></i></button></a>
-            <a href="#purchase" id="product-2-buy"><button>49,99€ <i class="fa-solid fa-cart-shopping"></i></button></a>
-            <a href="#purchase" id="product-3-buy"><button>59,99€ <i class="fa-solid fa-cart-shopping"></i></button></a>
+            <a href="#purchase" id="product-1-buy"><button>23,99€ <i class="fa-solid fa-cart-shopping"></i></button><br>Add to cart</a>
+            <a href="#purchase" id="product-2-buy"><button>49,99€ <i class="fa-solid fa-cart-shopping"></i></button><br>Add to cart</a>
+            <a href="#purchase" id="product-3-buy"><button>59,99€ <i class="fa-solid fa-cart-shopping"></i></button><br>Add to cart</a>
         </section>
 
         <div id="fun-quote-text">
