rearranged the css to make sense for everyone else and made notes everywhere in html and css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>PlantWay - Enjoy your plantcation</title>
 </head>
-
 <body>
+    <!-- section only to go to top -->
+    <section id="top"></section>
+    <!-- background fixed section -->
+    <section id="background-color"></section>
+    <!-- intro animation -->
     <div id="welcome-animation-container">
         <div id="welcome-animation-upper-left">
             <img id="upper-left-welcome-slide" src="assets/images/upper-left.png" alt="upper-left-intro-plant">
@@ -28,10 +32,11 @@
             <h1>HOLA</h1>
         </div>
     </div>
-    <div id="top"></div>
+  
+    <!-- header -->
     <header id="header">
         <div id="logo-big">
-            <a href="#home">
+            <a href="#top">
                 <h1>Plantway</h1>
                 <p>Watering Made Easy</p>
             </a>
@@ -56,7 +61,8 @@
             </nav>
         </div>
     </header>
-    <section id="home">
+    <!-- Presentation -->
+    <section>
         <div id="presentation-background">
             <div id="presentation-container">
                 <div id="presentation-text">
@@ -76,6 +82,7 @@
             </div>
         </div>
     </section>
+    <!-- Products -->
     <section id="products-grid-container">
         <div class="section-logo">
             <h2>PRODUCTS</h2>
@@ -148,10 +155,12 @@
             </div>
         </div>
     </section>
+    <!-- quote -->
     <div id="fun-quote-text">
         <h2>"Keeping it simple"</h2>
         <p>Come home to a green home no matter if you're gona a week or a month" </p>
     </div>
+    <!-- about -->
     <section id="about">
         <h2>About</h2>
         <p>Going away on vacation is a wonderful time. For many of us that is when we create our best memories of
@@ -189,6 +198,7 @@
             <br>
         </p>
     </section>
+    <!-- purchase -->
     <section id="purchase">
         <h2>PURCHASE</h2>
         <form id="purchase-form" action="https://formsubmit.co/eric.aj.backman@gmail.com" method="post">
@@ -285,6 +295,7 @@
 
         </Form>
     </section>
+    <!-- footer -->
     <footer id="footer-grid-container">
         <div class="section-logo"> PLANTCATION AB </div>
         <div id="section-opening-hours">
