new styling for form

--- a/index.html
+++ b/index.html
@@ -296,13 +296,13 @@
     </section>
     <!-- footer -->
     <footer id="footer-grid-container">
-        <div class="section-logo"> PLANTCATION AB </div>
-        <div id="section-opening-hours" aria-label="opening-hours"> 
+        <div class="section-logo"> PLANTWAY INC </div>
+        <div id="section-opening-hours"> 
             <h3>Opening Hours</h3> Monday - Friday<br> 09:00-17:00<br> Saturday - Sunday <br> Closed
         </div>
-        <div id="section-contact" aria-label="contact-information">
-            <h3>Contact</h3> E-mail: <a href="mailto:eric.aj.backman@gmail.com" aria-label="email-us">Eric Bäckman</a><br><p aria-label="phone-number"> Telephone: +47 704
-            90 91 21</p> <br> <p aria-label="adress">Address: Ankarstocksvägen 13 <br> 168 64, Stockholm <br> Sweden</p>
+        <div id="section-contact">
+            <h3>Contact</h3> E-mail: <a href="mailto:eric.aj.backman@gmail.com" aria-label="email-us">Eric Bäckman</a><br><p> Telephone: +47 704
+            90 91 21</p> <br> <p>Address: Ankarstocksvägen 13 <br> 168 64, Stockholm <br> Sweden</p>
         </div>
         <div id="section-social">
             <p>Social Media</p>
